# xRenderer

./: .clang-format  .gitignore
applications/CubicLatticeDemo/: main.cc  params.json
applications/GnarlDemo/: main.cc  params.json
applications/MandelbrotDemo/: CMakeLists.txt  main.cc  params.json
cmake/: setup_application.cmake  xRendererConfig.cmake
include/: Canvas.h  Color.h  ColorSpaces.h  Complex.h  Gradient.h  Grid.h  Grid2D.h  Layer.h  Mapping.h  Meshpoint.h  Sampler.h  SuperSampler.h  XYMapping.h  main.cc  typedefs.h  util.h
include/xRenderer/2D/: Dual2D.h  Vector2D.h
include/xRenderer/color/: Color.h  Gradient.h  RGBA.h
include/xRenderer/core/: Canvas.h  Complex.h  Grid2D.h  Layer.h  Meshpoint.h  Tensor.h  XYMapping.h  typedefs.h  util.h
include/xRenderer/mappings/: Mapping.h
include/xRenderer/samplers/: BasicComplexSamplers.h  BasicRealSamplers.h  CubicLattice.h  GnarlBase.h  Mandelbrot.h  Sampler.h
include/xRenderer/super_samplers/: BoxFilter.h  GaussianFilter.h  SuperSampler.h
test/: CMakeLists.txt  main.cc
